// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenseBlurb snapshots snapshots: renders as expected when details.attribution and details.noDerivatives equal true 1`] = `
<div
  className="d-flex flex-row align-items-center mt-2"
>
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <Icon
    className="mr-1 text-primary-300"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <div
    className="small mx-1.5"
  >
    <FormattedMessage
      defaultMessage="Some Rights Reserved"
      description="Label for row of creative common icons"
      id="authoring.videoeditor.license.creativeCommonsIcons.label"
    />
  </div>
</div>
`;

exports[`LicenseBlurb snapshots snapshots: renders as expected when details.attribution and details.noncommercial equal true 1`] = `
<div
  className="d-flex flex-row align-items-center mt-2"
>
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <Icon
    className="mr-1 text-primary-300"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <div
    className="small mx-1.5"
  >
    <FormattedMessage
      defaultMessage="Some Rights Reserved"
      description="Label for row of creative common icons"
      id="authoring.videoeditor.license.creativeCommonsIcons.label"
    />
  </div>
</div>
`;

exports[`LicenseBlurb snapshots snapshots: renders as expected when details.attribution and details.shareAlike equal true 1`] = `
<div
  className="d-flex flex-row align-items-center mt-2"
>
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <Icon
    className="mr-1 text-primary-300"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <div
    className="small mx-1.5"
  >
    <FormattedMessage
      defaultMessage="Some Rights Reserved"
      description="Label for row of creative common icons"
      id="authoring.videoeditor.license.creativeCommonsIcons.label"
    />
  </div>
</div>
`;

exports[`LicenseBlurb snapshots snapshots: renders as expected when details.attribution equal true 1`] = `
<div
  className="d-flex flex-row align-items-center mt-2"
>
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <Icon
    className="mr-1 text-primary-300"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <div
    className="small mx-1.5"
  >
    <FormattedMessage
      defaultMessage="Some Rights Reserved"
      description="Label for row of creative common icons"
      id="authoring.videoeditor.license.creativeCommonsIcons.label"
    />
  </div>
</div>
`;

exports[`LicenseBlurb snapshots snapshots: renders as expected with default props 1`] = `
<div
  className="d-flex flex-row align-items-center mt-2"
>
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <div
    className="small mx-1.5"
  >
    <FormattedMessage
      defaultMessage="All Rights Reserved"
      description="Label for row of all rights reserved icons"
      id="authoring.videoeditor.license.allRightsReservedIcons.label"
    />
  </div>
</div>
`;

exports[`LicenseBlurb snapshots snapshots: renders as expected with license equal to Creative Commons 1`] = `
<div
  className="d-flex flex-row align-items-center mt-2"
>
  <Icon
    className="mr-1"
    style={
      {
        "height": "18px",
        "width": "18px",
      }
    }
  />
  <div
    className="small mx-1.5"
  >
    <FormattedMessage
      defaultMessage="Some Rights Reserved"
      description="Label for row of creative common icons"
      id="authoring.videoeditor.license.creativeCommonsIcons.label"
    />
  </div>
</div>
`;
